# leaf

./: .gitignore  AGENTS.md  LICENSE.md  client_instructions.md  fanet_addresses.csv  menu-path-graph-viewer.html  platformio.ini  security_plan.md
FontCreation/: Leaf_6x12.bdf  Leaf_8x14.bdf  bdf.tga  leaf_28h.bdf  leaf_28h.c  leaf_28h.fnt  leaf_5h.fon  leaf_6x12.c  leaf_6x12.fon  leaf_8x14.c  leaf_8x14.fon  leaf_labels.bdf  leaf_labels.c  leaf_labels.fon
analyses/: visualize_message_timing.py
factory_interface/: .gitignore  README.md  alembic.ini  pyproject.toml
factory_interface/alembic/: env.py
factory_interface/alembic/versions/: 0001_create_device_table.py  0001_create_initial_tables.py
factory_interface/src/factory_interface/: __init__.py  app.py  commissioning_sessions.py  commissioning_tasks.py  database.py  fanet_id_task.py  firmware_version_task.py  http_client.py  mac_address_task.py  main.py  models.py  network_discovery.py  nonvolatile_memory_task.py  self_test_task.py  settings.py
factory_interface/src/factory_interface/static/: styles.css
factory_interface/src/factory_interface/templates/: base.html  discovery.html  home.html  login.html  rework_device.html  settings.html  setup_checklist.html  setup_device.html  setup_session.html  setup_session_missing.html  setup_sessions.html
sim/: README.md  play_buslog.py
src/: README.md
tests/: test_invariant_commissioning_sessions.py
utils/: sd_card_format_inspector.py
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
wind_estimation/: estimate.py  estimation.py  (+4 more)
(+898 files in other folders)
