[project]
name = "factory-interface"
version = "0.1.0"
description = "Local factory commissioning utility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "implicitdict>=4.1.0",
    "jinja2>=3.1.4",
    "pyserial",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.6",
]

[project.scripts]
factory-interface = "factory_interface.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/factory_interface"]
